--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -25,3 +25,5 @@
           %td= link_to 'Show', <%= singular_table_name %>
           %td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
           %td= link_to 'Destroy', <%= singular_table_name %>, :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+  = paginate @<%= plural_table_name %>
