--- a/lib/templates/haml/scaffold/edit.html.haml
+++ b/lib/templates/haml/scaffold/edit.html.haml
@@ -1,4 +1,10 @@
 .container
+  %ol.breadcrumb
+    %li= link_to 'Home', root_path
+    %li= link_to <%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path
+    %li= link_to <%= class_name %>.model_name.human, @<%= singular_table_name %>
+    %li.active Edit
+
   .page-header
     %h1= "Edit #{<%= class_name %>.model_name.human}"
 
