Make home feel more home-y and remove breadcrumb

--- a/app/views/statics/home.html.haml
+++ b/app/views/statics/home.html.haml
@@ -1,6 +1,4 @@
 .container
-  %ol.breadcrumb
-    %li.active Home
-
-  .page-header
+  .jumbotron
     %h1 Home
+    %p &hellip;is where your Wi-Fi connects automatically.
