--- a/lib/templates/haml/scaffold/show.html.haml
+++ b/lib/templates/haml/scaffold/show.html.haml
@@ -1,9 +1,10 @@
-.container
+- content_for :breadcrumbs do
   %ol.breadcrumb
     %li= link_to 'Home', root_path
     %li= link_to <%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path
     %li.active= <%= class_name %>.model_name.human
 
+.container
   .page-header.clearfix
     %h1.pull-left= <%= class_name %>.model_name.human
     .pull-right{ :style => 'margin-top: 20px' }
