--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -12,3 +12,10 @@
   - else
     = link_to 'Cancel', <%= index_helper %>_path, :class => 'btn btn-default'
 
+  - if @<%= singular_table_name %>.persisted?
+    = link_to @<%= singular_table_name %>,
+        :class => 'btn btn-danger pull-right',
+        :method => :delete,
+        :data => { :confirm => 'Are you sure?' } do
+      %i.glyphicon.glyphicon-trash
+      = "Destroy #{<%= class_name %>.model_name.human}"
