Fix a bug with collapsible navbar selector/id attribute

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
 
           = link_to 'Zangetsu', root_path, :class => 'navbar-brand'
 
-        .collapse.navbar-collapse{ :id => '#bs-example-navbar-collapse-1' }
+        .collapse.navbar-collapse{ :id => 'bs-example-navbar-collapse-1' }
           %ul.nav.navbar-nav
             / primary navigation
 
