Add support for Font Awesome using font-awesome-rails gem

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,12 +25,12 @@
             - if user_signed_in?
               %li
                 = link_to destroy_user_session_path, :method => :delete do
-                  %i.glyphicon.glyphicon-log-out
+                  = fa_icon 'sign-in'
                   Sign out
             - else
               %li
                 = link_to new_user_session_path do
-                  %i.glyphicon.glyphicon-log-in
+                  = fa_icon 'sign-out'
                   Sign in
 
     .container
