--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -3,7 +3,7 @@
     %h2 Forgot your password?
 
   = simple_form_for(resource, as: resource_name, url: password_path(resource_name), :wrapper => :horizontal_form, :wrapper_mappings => { :boolean => :horizontal_boolean }, :html => { :class => 'form-horizontal', :role => 'form', :method => :post }) do |f|
-    = f.input :email, :required => true, :autofocus => true
+    = f.input :login, :required => true, :autofocus => true
 
     .form-group
       .col-sm-offset-3.col-sm-9
