--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,7 +3,8 @@
     %h2 Sign up
 
   = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :wrapper => :horizontal_form, :wrapper_mappings => { :boolean => :horizontal_boolean }, :html => { :class => 'form-horizontal', :role => 'form' }) do |f|
-    = f.input :email, :required => true, :autofocus => :true
+    = f.input :username, :required => true, :autofocus => :true
+    = f.input :email, :required => true
     = f.input :password, :required => true
     = f.input :password_confirmation, :required => true
 
