Use gravatar. Show username and avatar in navigation bar when signed in

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,10 @@
 @import "font-awesome";
 
 body { padding-top: $navbar-height + $grid-gutter-width; }
+
+.navbar .avatar {
+  @include border-top-radius(2px);
+  @include border-bottom-radius(2px);
+
+  margin: -7px ($grid-gutter-width * 0.25) -7px 0;
+}
