--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     = display_meta_tags :site => 'Zangetsu', :reverse => true, :separator => '-'
-    = stylesheet_link_tag 'application', :media => 'all', :'data-turbolinks-track' => true
-    = javascript_include_tag 'application', :'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', :media => 'all'
+    = javascript_include_tag 'application'
     = csrf_meta_tag
   %body
     %navbar.navbar.navbar-inverse.navbar-fixed-top
