--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -7,9 +7,10 @@
   .page-header.clearfix
     %h1.pull-left= <%= class_name %>.model_name.human.pluralize
     .pull-right{ :style => 'margin-top: 20px' }
-      = link_to new_<%= singular_table_name %>_path, :class => 'btn btn-success pull-right' do
-        = fa_icon 'plus-circle'
-        = "New #{<%= class_name %>.model_name.human}"
+      - if can?(:new, @<%= plural_table_name %>.new)
+        = link_to new_<%= singular_table_name %>_path, :class => 'btn btn-success pull-right' do
+          = fa_icon 'plus-circle'
+          = "New #{<%= class_name %>.model_name.human}"
 
   %table.table.table-hover.table-striped
     %thead
@@ -27,8 +28,11 @@
     <%- for attribute in attributes -%>
           %td= <%= singular_table_name %>.<%= attribute.name %>
     <%- end -%>
-          %td= link_to 'Show', <%= singular_table_name %>
-          %td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
-          %td= link_to 'Destroy', <%= singular_table_name %>, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          - if can?(:show, <%= singular_table_name %>)
+            %td= link_to 'Show', <%= singular_table_name %>
+          - if can?(:edit, <%= singular_table_name %>)
+            %td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
+          - if can?(:destroy, <%= singular_table_name %>)
+            %td= link_to 'Destroy', <%= singular_table_name %>, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
   = paginate @<%= plural_table_name %>
