--- a/lib/templates/haml/scaffold/show.html.haml
+++ b/lib/templates/haml/scaffold/show.html.haml
@@ -8,9 +8,10 @@
   .page-header.clearfix
     %h1.pull-left= <%= class_name %>.model_name.human
     .pull-right{ :style => 'margin-top: 20px' }
-      = link_to edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-default pull-right' do
-        = fa_icon 'edit'
-        = "Edit #{<%= class_name %>.model_name.human}"
+      - if can?(:edit, @<%= singular_table_name %>)
+        = link_to edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-default pull-right' do
+          = fa_icon 'edit'
+          = "Edit #{<%= class_name %>.model_name.human}"
 
   %dl.dl-horizontal
   <%- for attribute in attributes -%>
