--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,8 +1,13 @@
+- content_for :breadcrumbs do
+  %ol.breadcrumb
+    %li= link_to 'Home', root_path
+    %li.active= "Edit #{resource_class.model_name.human}"
+
 .container
   .page-header
     %h2= "Edit #{resource_class.model_name.human}"
 
-  = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+  = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :wrapper => :horizontal_form, :wrapper_mappings => { :boolean => :horizontal_boolean }, :html => { :class => 'form-horizontal', :role => 'form', :method => :put }) do |f|
     = f.error_notification
 
     = f.input :email, :required => true, :autofocus => true
@@ -16,14 +21,17 @@
     = f.input :current_password, :required => true,
               :hint => 'we need your current password to confirm your changes'
 
-    = f.button :submit, 'Update'
+    .form-group
+      .col-sm-offset-3.col-sm-9
+        = f.button :submit, 'Update', :class => 'btn-primary'
 
-  %h3 Cancel my account
+  %hr
 
-  %p
-    Unhappy?
-    = link_to "Cancel my account", registration_path(resource_name),
-              :data => { :confirm => 'Are you sure?' },
-              :method => :delete
-
-  = link_to 'Back', :back
+  .panel.panel-danger
+    .panel-heading
+      %h3.panel-title Unhappy?
+    .panel-body
+      = link_to "Cancel my account", registration_path(resource_name),
+                :data => { :confirm => 'Are you sure?' },
+                :method => :delete,
+                :class => 'btn btn-danger'
