--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -28,15 +28,15 @@
             %ul.dropdown-menu
               %li
                 = link_to edit_registration_path(current_user) do
-                  = fa_icon 'user'
+                  %i.fa.fa-user
                   = "Edit #{User.model_name.human}"
               %li.divider
               %li
                 = link_to destroy_user_session_path, :method => :delete do
-                  = fa_icon 'sign-in'
+                  %i.fa.fa-sign-in
                   Sign out
         - else
           %li
             = link_to new_user_session_path do
-              = fa_icon 'sign-out'
+              %i.fa.fa-sign-out
               Sign in
