--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,14 @@
-!!! 5
-%html{ :lang => 'en' }
+!!!
+/[if lt IE 8] <html class="no-js ie7 oldie" lang="en">
+/[if IE 8] <html class="no-js ie8 oldie" lang="en">
+/[if IE 9] <html class="no-js ie9 oldie" lang="en">
+<!--[if gt IE 9]><!-->
+%html{ :class => 'no-js', :lang => 'en' }<>
+  <!--<![endif]-->
+  
   %head
     %meta{ :charset => 'utf-8' }
-    %meta{ :'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge' }
+    %meta{ :'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }
     %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1' }
 
     = display_meta_tags :site => 'Zangetsu', :reverse => true, :separator => '-'
@@ -10,9 +16,10 @@
 
     = stylesheet_link_tag 'application', :media => 'all'
 
-    / [if lt IE 9]
-      = javascript_include_tag '//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js'
-      = javascript_include_tag '//oss.maxcdn.com/respond/1.4.2/respond.min.js'
+    = javascript_include_tag 'modernizr/modernizr'
+    = javascript_include_tag 'respond/dest/respond.src'
+
+    = javascript_include_tag 'jquery/dist/jquery'
 
   %body
     %header
