--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -17,5 +17,5 @@
         :class => 'btn btn-danger pull-right',
         :method => :delete,
         :data => { :confirm => 'Are you sure?' } do
-      = fa_icon 'trash-o'
+      %i.fa.fa-trash-o
       = "Destroy #{<%= class_name %>.model_name.human}"
