--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -9,7 +9,7 @@
     .pull-right{ :style => 'margin-top: 20px' }
       - if can?(:new, @<%= plural_table_name %>.new)
         = link_to new_<%= singular_table_name %>_path, :class => 'btn btn-success pull-right' do
-          = fa_icon 'plus-circle'
+          %i.fa.fa-plus-circle
           = "New #{<%= class_name %>.model_name.human}"
 
   %table.table.table-hover.table-striped
