--- a/lib/templates/haml/scaffold/show.html.haml
+++ b/lib/templates/haml/scaffold/show.html.haml
@@ -10,7 +10,7 @@
     .pull-right{ :style => 'margin-top: 20px' }
       - if can?(:edit, @<%= singular_table_name %>)
         = link_to edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-default pull-right' do
-          = fa_icon 'edit'
+          %i.fa.fa-edit
           = "Edit #{<%= class_name %>.model_name.human}"
 
   %dl.dl-horizontal
