--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -2,20 +2,18 @@
   = f.error_notification
 
 <%- attributes.each do |attribute| -%>
-  = f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>
+  = f.<%= attribute.reference? ? :association : :input %>(:<%= attribute.name %>)
 <%- end -%>
 
-  = f.button :submit, :class => 'btn btn-primary'
+  = f.button(:submit, :class => 'btn btn-primary')
 
-  - if @<%= singular_table_name %>.persisted?
-    = link_to 'Cancel', @<%= singular_table_name %>, :class => 'btn btn-default'
-  - else
-    = link_to 'Cancel', <%= index_helper %>_path, :class => 'btn btn-default'
+  = link_to('Cancel', @<%= singular_table_name %>.persisted? ? @<%= singular_table_name %> : <%= index_helper %>_path,
+      :class => 'btn btn-default')
 
-  - if can?(:destroy, @<%= singular_table_name %>) && @<%= singular_table_name %>.persisted?
-    = link_to @<%= singular_table_name %>,
+  - if @<%= singular_table_name %>.persisted? && can?(:destroy, @<%= singular_table_name %>)
+    = link_to(@<%= singular_table_name %>,
         :class => 'btn btn-danger pull-right',
         :method => :delete,
-        :data => { :confirm => 'Are you sure?' } do
+        :data => { :confirm => 'Are you sure?' }) do
       %i.fa.fa-trash-o
       = "Destroy #{<%= class_name %>.model_name.human}"
