--- a/lib/templates/haml/scaffold/edit.html.haml
+++ b/lib/templates/haml/scaffold/edit.html.haml
@@ -1,12 +1,12 @@
-- content_for :breadcrumbs do
+- content_for(:breadcrumbs) do
   %ol.breadcrumb
-    %li= link_to 'Home', root_path
-    %li= link_to <%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path
-    %li= link_to <%= class_name %>.model_name.human, @<%= singular_table_name %>
+    %li= link_to('Home', root_path)
+    %li= link_to(<%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path)
+    %li= link_to(<%= class_name %>.model_name.human, @<%= singular_table_name %>)
     %li.active Edit
 
 .container
   .page-header
     %h1= "Edit #{<%= class_name %>.model_name.human}"
 
-  = render 'form'
+  = render('form')
