--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -1,16 +1,16 @@
-- content_for :breadcrumbs do
+- content_for(:breadcrumbs) do
   %ol.breadcrumb
-    %li= link_to 'Home', root_path
+    %li= link_to('Home', root_path)
     %li.active= <%= class_name %>.model_name.human.pluralize
 
 .container
-  .page-header.clearfix
-    %h1.pull-left= <%= class_name %>.model_name.human.pluralize
-    .pull-right{ :style => 'margin-top: 20px' }
-      - if can?(:new, @<%= plural_table_name %>.new)
-        = link_to new_<%= singular_table_name %>_path, :class => 'btn btn-success pull-right' do
-          %i.fa.fa-plus-circle
-          = "New #{<%= class_name %>.model_name.human}"
+  .page-header
+    - if can?(:new, @<%= plural_table_name %>.new)
+      = link_to(new_<%= singular_table_name %>_path, :class => 'btn btn-success pull-right') do
+        %i.fa.fa-plus-circle
+        = "New #{<%= class_name %>.model_name.human}"
+
+    %h1= <%= class_name %>.model_name.human.pluralize
 
   %table.table.table-hover.table-striped
     %thead
@@ -28,10 +28,15 @@
     <%- for attribute in attributes -%>
           %td= <%= singular_table_name %>.<%= attribute.name %>
     <%- end -%>
-          %td= link_to 'Show', <%= singular_table_name %>
-          - if can?(:edit, <%= singular_table_name %>)
-            %td= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
-          - if can?(:destroy, <%= singular_table_name %>)
-            %td= link_to 'Destroy', <%= singular_table_name %>, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %td
+            = link_to('Show', <%= singular_table_name %>)
+          %td
+            - if can?(:edit, <%= singular_table_name %>)
+              = link_to('Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>))
+          %td
+            - if can?(:destroy, <%= singular_table_name %>)
+              = link_to('Destroy', <%= "#{singular_table_name}" %>,
+                  :method => :delete,
+                  :data => { :confirm => 'Are you sure?' })
 
-  = paginate @<%= plural_table_name %>
+  = paginate(@<%= plural_table_name %>)
