--- a/lib/templates/haml/scaffold/new.html.haml
+++ b/lib/templates/haml/scaffold/new.html.haml
@@ -1,11 +1,11 @@
-- content_for :breadcrumbs do
+- content_for(:breadcrumbs) do
   %ol.breadcrumb
-    %li= link_to 'Home', root_path
-    %li= link_to <%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path
+    %li= link_to('Home', root_path)
+    %li= link_to(<%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path)
     %li.active New
 
 .container
   .page-header
     %h1= "New #{<%= class_name %>.model_name.human}"
 
-  = render 'form'
+  = render('form')
