--- a/lib/templates/haml/scaffold/show.html.haml
+++ b/lib/templates/haml/scaffold/show.html.haml
@@ -1,17 +1,17 @@
-- content_for :breadcrumbs do
+- content_for(:breadcrumbs) do
   %ol.breadcrumb
-    %li= link_to 'Home', root_path
-    %li= link_to <%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path
+    %li= link_to('Home', root_path)
+    %li= link_to(<%= class_name %>.model_name.human.pluralize, <%= index_helper %>_path)
     %li.active= <%= class_name %>.model_name.human
 
 .container
-  .page-header.clearfix
-    %h1.pull-left= <%= class_name %>.model_name.human
-    .pull-right{ :style => 'margin-top: 20px' }
-      - if can?(:edit, @<%= singular_table_name %>)
-        = link_to edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-default pull-right' do
-          %i.fa.fa-edit
-          = "Edit #{<%= class_name %>.model_name.human}"
+  .page-header
+    - if can?(:edit, @<%= singular_table_name %>)
+      = link_to(edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-default pull-right') do
+        %i.fa.fa-edit
+        = "Edit #{<%= class_name %>.model_name.human}"
+
+    %h1= <%= class_name %>.model_name.human
 
   %dl.dl-horizontal
   <%- for attribute in attributes -%>
