Fix some missing parenthesis

--- a/lib/templates/haml/scaffold/edit.html.haml
+++ b/lib/templates/haml/scaffold/edit.html.haml
@@ -1,5 +1,5 @@
-- set_meta_tags :title => "Edit #{<%= class_name %>.model_name.human}",
-                :noindex => true
+- set_meta_tags(:title => "Edit #{<%= class_name %>.model_name.human}",
+                :noindex => true)
 
 - content_for(:breadcrumbs) do
   %ol.breadcrumb
