--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -1,5 +1,5 @@
-- set_meta_tags :title => <%= class_name %>.model_name.human.pluralize,
-                :canonical => <%= index_helper %>_url
+- set_meta_tags(:title => <%= class_name %>.model_name.human.pluralize,
+                :canonical => <%= index_helper %>_url)
 
 - content_for(:breadcrumbs) do
   %ol.breadcrumb
