--- a/lib/generators/zangetsu/scaffold/templates/index.html.haml
+++ b/lib/generators/zangetsu/scaffold/templates/index.html.haml
@@ -15,31 +15,6 @@
 
     %h1= <%= class_name %>.model_name.human.pluralize
 
-  %table.table.table-hover.table-striped
-    %thead
-      %tr
-    <%- for attribute in attributes -%>
-        %th= sort_link(@search, :<%= attribute.name %>, <%= class_name%>.human_attribute_name(:<%= attribute.name %>))
-    <%- end -%>
-        %th
-        %th
-        %th
-
-    %tbody
-      - @<%= plural_table_name %>.each do |<%= singular_table_name %>|
-        %tr
-    <%- for attribute in attributes -%>
-          %td= <%= singular_table_name %>.<%= attribute.name %>
-    <%- end -%>
-          %td
-            = link_to('Show', <%= singular_table_name %>)
-          %td
-            - if can?(:edit, <%= singular_table_name %>)
-              = link_to('Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>))
-          %td
-            - if can?(:destroy, <%= singular_table_name %>)
-              = link_to('Destroy', <%= "#{singular_table_name}" %>,
-                  :method => :delete,
-                  :data => { :confirm => 'Are you sure?' })
+  = render('table')
 
   = paginate(@<%= plural_table_name %>)
