Prevent scaffold from adding certain "internal" attributes to views

--- a/lib/generators/zangetsu/scaffold/templates/_form.html.haml
+++ b/lib/generators/zangetsu/scaffold/templates/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for(@<%= singular_table_name %>) do |f|
   = f.error_notification
 
-<%- attributes.each do |attribute| -%>
+<%- visible_attributes.each do |attribute| -%>
   = f.<%= attribute.reference? ? :association : :input %>(:<%= attribute.name %>)
 <%- end -%>
 
