--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
 <!--[if gt IE 9]><!-->
 %html{ :class => 'no-js', :lang => 'en' }<>
   <!--<![endif]-->
-  
+
   %head
     %meta{ :charset => 'utf-8' }
     %meta{ :'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }
@@ -16,10 +16,10 @@
 
     = stylesheet_link_tag 'application', :media => 'all'
 
-    = javascript_include_tag 'modernizr/modernizr'
-    = javascript_include_tag 'respond/dest/respond.src'
+    = javascript_include_tag 'modernizr'
+    = javascript_include_tag 'respond.src'
 
-    = javascript_include_tag 'jquery/dist/jquery'
+    = javascript_include_tag 'jquery'
 
   %body
     %header
