Screw gulp prepare assets using a generator, just because

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
     = stylesheet_link_tag 'application', :media => 'all'
 
     = javascript_include_tag 'modernizr'
-    = javascript_include_tag 'respond.src'
+    = javascript_include_tag 'respond'
 
     = javascript_include_tag 'jquery'
 
