--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,10 +12,10 @@
  *= require_tree .
  */
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import "bootstrap/bootstrap-sprockets";
+@import "bootstrap/bootstrap";
 
-@import "font-awesome";
+@import "fontawesome/font-awesome";
 
 body { padding-top: $navbar-height + $grid-gutter-width; }
 
