Stuff it, use rails-assets.org to manage frontend dependencies via Gemfile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,10 +12,8 @@
  *= require_tree .
  */
 
-@import "bootstrap/bootstrap-sprockets";
-@import "bootstrap/bootstrap";
-
-@import "fontawesome/font-awesome";
+@import "bootstrap-sass";
+@import "font-awesome";
 
 body { padding-top: $navbar-height + $grid-gutter-width; }
 
