Move container to the layout and rejig layouts and scaffold

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,8 @@
           = bootstrap_flash
 
     %main
-      = yield
+      .container#content
+        = yield
 
     %footer
       / something here
