Replace flash helper with a view and simplify

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
 
       - if flash.present?
         .container#flash
-          = bootstrap_flash
+          = render 'flash'
 
     %main
       .container#content
