--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,9 @@ $fa-font-path: "font-awesome/fonts";
 
 body { padding-top: $navbar-height + $grid-gutter-width; }
 
+.alert-notice { @extend .alert-success; }
+.alert-alert  { @extend .alert-danger; }
+
 .img-avatar {
   @extend .img-circle;
 
