Change the name of the project from Zangetsu to Gunzel
Because naming open source projects is hard :(

--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -7,7 +7,7 @@
         %span.icon-bar
         %span.icon-bar
 
-      = link_to 'Zangetsu', root_path, :class => 'navbar-brand'
+      = link_to 'Gunzel', root_path, :class => 'navbar-brand'
 
     .collapse.navbar-collapse{ :id => 'bs-example-navbar-collapse-1' }
       %ul.nav.navbar-nav
