--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     %meta{ :'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }
     %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1' }
 
-    = display_meta_tags :site => 'Zangetsu', :reverse => true, :separator => '-'
+    = display_meta_tags :site => 'Gunzel', :reverse => true, :separator => '-'
     = csrf_meta_tag
 
     = stylesheet_link_tag 'application', :media => 'all'
