--- a/lib/generators/gunzel/scaffold/templates/show.html.erb
+++ b/lib/generators/gunzel/scaffold/templates/show.html.erb
@@ -10,15 +10,10 @@
 <%% end %>
 
 <div class="page-header">
-  <%% if can?(:edit, @<%= singular_table_name %>) %>
-    <%%= link_to(edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-default pull-right') do %>
-      <i class="fa fa-edit"></i>
-      <%%= "Edit #{<%= class_name %>.model_name.human}" %>
-    <%% end %>
-  <%% end %>
-
   <h1><%%= <%= class_name %>.model_name.human %></h1>
 </div>
+
+<%%= render('tabs') %>
 
 <dl class="dl-horizontal">
 <%- visible_attributes.each do |attribute| -%>
