--- a/lib/generators/gunzel/scaffold/templates/edit.html.erb
+++ b/lib/generators/gunzel/scaffold/templates/edit.html.erb
@@ -11,15 +11,17 @@
 <%% end %>
 
 <div class="page-header">
-  <%% if can?(:destroy, @<%= singular_table_name %>) %>
-    <%%= link_to(@<%= singular_table_name %>, :class => 'btn btn-danger pull-right',
-              <%= ' ' * singular_table_name.length %>     :method => :delete,
-              <%= ' ' * singular_table_name.length %>     :data => { :confirm => 'Are you sure?' }
-    ) do %>
-      <i class="fa fa-trash-o"></i>
-      <%%= "Destroy #{<%= class_name %>.model_name.human}" %>
+  <div class="page-header-actions">
+    <%% if can?(:destroy, @<%= singular_table_name %>) %>
+      <%%= link_to(@<%= singular_table_name %>, :class => 'btn btn-sm btn-danger',
+                <%= ' ' * singular_table_name.length %>     :method => :delete,
+                <%= ' ' * singular_table_name.length %>     :data => { :confirm => 'Are you sure?' }
+      ) do %>
+        <i class="fa fa-trash-o"></i>
+        <%%= "Destroy #{<%= class_name %>.model_name.human}" %>
+      <%% end %>
     <%% end %>
-  <%% end %>
+  </div>
 
   <h1><%%= "Edit #{<%= class_name %>.model_name.human}" %></h1>
 </div>
