Work out the search field in the generator, not the template

--- a/lib/generators/gunzel/scaffold/templates/_search.html.erb
+++ b/lib/generators/gunzel/scaffold/templates/_search.html.erb
@@ -1,12 +1,9 @@
 <%%= search_form_for(@search, :class => 'form-inline') do |f| %>
   <div class="input-group input-group-sm">
-   <%%= f.input_field :<%=
-    visible_attributes.select { |a| a.type == :string || a.type == :text } \
-                      .map(&:name) \
-                      .join('_or_') %>_cont,
-                      :class => 'form-control',
-                      :required => false,
-                      :placeholder => 'Search' %>
+   <%%= f.input_field :<%= search_field %>,
+                     :class => 'form-control',
+                     :required => false,
+                     :placeholder => 'Search' %>
 
     <div class="input-group-btn">
      <%%= button_tag :class => 'btn btn-default' do %>
