--- a/lib/generators/gunzel/scaffold/templates/edit.html.erb
+++ b/lib/generators/gunzel/scaffold/templates/edit.html.erb
@@ -10,7 +10,7 @@
   </ol>
 <%% end %>
 
-<div class="page-header">
+<div class="page-header page-header-tabbed">
   <div class="page-header-actions">
     <%% if can?(:destroy, @<%= singular_table_name %>) %>
       <%%= link_to(@<%= singular_table_name %>, :class => 'btn btn-sm btn-danger',
@@ -24,7 +24,8 @@
   </div>
 
   <h1><%%= "Edit #{<%= class_name %>.model_name.human}" %></h1>
+
+  <%%= render('tabs') %>
 </div>
 
-<%%= render('tabs') %>
 <%%= render('form') %>
