--- a/lib/generators/gunzel/scaffold/templates/show.html.erb
+++ b/lib/generators/gunzel/scaffold/templates/show.html.erb
@@ -9,11 +9,11 @@
   </ol>
 <%% end %>
 
-<div class="page-header">
+<div class="page-header page-header-tabbed">
   <h1><%%= <%= class_name %>.model_name.human %></h1>
-</div>
 
-<%%= render('tabs') %>
+  <%%= render('tabs') %>
+</div>
 
 <dl class="dl-horizontal">
 <%- visible_attributes.each do |attribute| -%>
