Switch to official bootstrap-sass gem
Because the less we depend on rails-assets.org the better

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,8 @@
  *= require_tree .
  */
 
-@import "bootstrap-sass";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 $fa-font-path: "font-awesome/fonts";
 @import "font-awesome";
