Switch to official font-awesome-sass gem too

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$fa-font-path: "font-awesome/fonts";
+@import "font-awesome-sprockets";
 @import "font-awesome";
 
 body { padding-top: $navbar-height + $grid-gutter-width; }
